deleted old to dos

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "stylelint-config-standard": "^19.0.0"
   },
   "dependencies": {
+    "bulma": "^0.7.5",
     "json": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
